--- a/BibliotecaEISI(Proyecto)/res/layout/activity_historial_entrega.xml
+++ b/BibliotecaEISI(Proyecto)/res/layout/activity_historial_entrega.xml
@@ -6,11 +6,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".HistorialEntregaActivity" >
+    tools:context=".HistoriaEntregaActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/listViewConsultaPrestamo"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" >
+    </ListView>
 
 </RelativeLayout>
