--- a/BibliotecaEISI(Proyecto)/res/layout/activity_agregar_usuario.xml
+++ b/BibliotecaEISI(Proyecto)/res/layout/activity_agregar_usuario.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textIdPrestamo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/userTxtIdUsuario" />
