--- a/BibliotecaEISI(Proyecto)/res/layout/fragment_busqueda_prestamo.xml
+++ b/BibliotecaEISI(Proyecto)/res/layout/fragment_busqueda_prestamo.xml
@@ -3,13 +3,26 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/textIdPrestamo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/textViewIdPrestamo"
+        android:textSize="25sp" />
 
     <TextView
         android:id="@+id/DetalleDocumento"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:text="@string/buscar" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:text="" />
+
     <EditText
         android:id="@+id/editText1"
         android:layout_width="match_parent"
