--- a/BibliotecaEISI(Proyecto)/res/layout/activity_agregar_editorial.xml
+++ b/BibliotecaEISI(Proyecto)/res/layout/activity_agregar_editorial.xml
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="text" />
+            android:inputType="number" />
 
     </TableRow>
 
