--- a/BibliotecaEISI(Proyecto)/res/layout/activity_historial_prestamo.xml
+++ b/BibliotecaEISI(Proyecto)/res/layout/activity_historial_prestamo.xml
@@ -6,11 +6,13 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".HistorialPrestamoActivity" >
-
-    <TextView
-        android:layout_width="wrap_content"
+    tools:context=".HistoriaPrestamoActivity" >
+    <ListView
+        android:id="@+id/listViewHistorialPrestamo"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" >
+    </ListView>
 
 </RelativeLayout>
