--- a/BibliotecaEISI(Proyecto)/res/layout/activity_agregar_usuario.xml
+++ b/BibliotecaEISI(Proyecto)/res/layout/activity_agregar_usuario.xml
@@ -120,7 +120,7 @@
             android:text="@string/userTxtTipo" />
 
         <Spinner
-            android:id="@+id/spinner1"
+            android:id="@+id/spinnerAutores"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
