--- a/BibliotecaEISI(Proyecto)/res/layout/fragment_busqueda_prestamo.xml
+++ b/BibliotecaEISI(Proyecto)/res/layout/fragment_busqueda_prestamo.xml
@@ -38,6 +38,12 @@
         android:layout_marginTop="15dp"
         android:onClick="buscar"
         android:text="@string/buscar" />
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="busquedaSpeech"
+        android:text="@string/buscarSpeech" />
 
     <Button
         android:id="@+id/button2"
