--- a/BibliotecaEISI(Proyecto)/res/layout/activity_resultado.xml
+++ b/BibliotecaEISI(Proyecto)/res/layout/activity_resultado.xml
@@ -6,14 +6,11 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Escaner" >
+    tools:context=".ResultadoActivity" >
 
-    <Button
-        android:id="@+id/button1"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:onClick="Scan"
-        android:text="@string/print_string" />
+        android:text="@string/hello_world" />
+
 </RelativeLayout>
